--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6",
-    "sass": "^1.76.0"
+    "sass": "^1.76.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
