--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.7.2",
-    "expo": "^51.0.8",
+    "date-fns": "^3.6.0",
+    "expo": "^51.0.9",
     "expo-status-bar": "^1.12.1",
     "firebase": "^10.12.1",
     "react": "18.2.0",
