--- a/src/database/config.json
+++ b/src/database/config.json
@@ -1,8 +1,8 @@
 {
-  "apiKey": "AIzaSyA2bjWy31kC61C1cOE9kHmRaScORKjQlpo",
-  "authDomain": "comparafarma-e6130.firebaseapp.com",
-  "projectId": "comparafarma-e6130",
-  "storageBucket": "comparafarma-e6130.appspot.com",
-  "messagingSenderId": "11255431283",
-  "appId": "1:11255431283:web:f8650edc428f4dab292a06"
+  "apiKey": "",
+  "authDomain": "",
+  "projectId": "",
+  "storageBucket": "",
+  "messagingSenderId": "",
+  "appId": ""
 }
